--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "mongoose": "^8.6.3",
+    "pug": "^3.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
