--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/multer": "^1.4.12",
+    "body-parser": "^1.20.3",
+    "cloudinary": "^2.5.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "md5": "^2.3.0",
     "mongoose": "^8.6.3",
     "mongoose-slug-updater": "^3.3.0",
-    "pug": "^3.0.3"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.15",
+    "pug": "^3.0.3",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
