--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "md5": "^2.3.0",
+    "method-override": "^3.0.0",
     "mongoose": "^8.6.3",
     "mongoose-slug-updater": "^3.3.0",
     "multer": "^1.4.5-lts.1",
