--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "mongoose-slug-updater": "^3.3.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
+    "path": "^0.12.7",
     "pug": "^3.0.3",
     "streamifier": "^0.1.1",
+    "tinymce": "^7.3.0",
     "unidecode": "^1.1.0"
   },
   "devDependencies": {
